# total-neutron-cross-sections

./: .gitignore  README  install.sh  wudaq.sh
NeAnalysis/: Makefile  README  clean.cpp  hexToDec.sh  histos.cpp  matchWaveforms.cpp  oldSort.cpp  raw.cpp  resort.cpp  sort.sh  waveform.cpp
WashUDAQ/: README  filepaths.txt  install.sh  stagingLocation.txt  storageLocation.txt  wudaq.sh
analysis/: .#sort.cpp  .gitignore  DPPwaveform.cpp  HOW_TO_USE  Makefile  Plot_Cross.C  README  SumHistos.cpp  analyze.C  analyze.h  analyze.sh  driver  examineRuns.cpp  experiment.txt  fineTime18.C  fineTime18.h  finetime.C  finetimeCheck  finetimeCheck.cpp  finetimeOld.C  finetimeOld.h  fitDataPulse.C  histos.cpp  moveScript.sh  multiplot.cpp  oldsort.sh  output.txt  plotMonitor.cpp  plotRelativeCS.cpp  produceCrossSections.sh  raw.cpp  readLitData  relative  remap.sh  resort.cpp  sort.cpp  sort.sh  subtractCS  sumAll  sumAll.cpp  (+7 more)
lib/: libiniparser.so.0
nickel/: .gitignore  AnalysisConfig.txt  CSConfig.txt  DeadtimeConfig.txt  DigitizerConfig.txt  FacilityConfig.txt  PlotConfig.txt  TargetConfig.txt  TargetOrder.txt  TimeConfig.txt  TimeOffsetsConfig.txt  blacklist.txt  channelMap.txt  defaultFilepath.txt  defaultTargetOrder.txt  filepaths.txt  relativePlots.txt  softwareCFDConfig.txt  targetNames.txt  targetOrder.txt  timeOffsetsConfig.txt
oxygen/: Makefile  blacklist.txt  channelMap.txt  defaultFilepath.txt  filepaths.txt  litRelativePlots.txt  plotLitData  plotLitData.cpp  positionNames.txt  relativePlots.txt  runsToSort.txt  subtractedPlots.txt  targetNames.txt  targetOrder.txt
prodConfig/: config.txt  dppconfig.txt  waveformconfig.txt
publications/: neutronTCS_workingDraft.tex  neutronTCS_workingDraft_backup.tex  neutronTCS_workingDraft_number2.tex  references.bib  references_backup.bib  supplemental.tex
rhodium/: channelMap.txt  filepaths.txt  positionNames.txt  targetNames.txt  targetOrder.txt
ronConfig/: config.txt  dppconfig.txt  waveformconfig.txt
targetConfig/: config.txt  (+4 more)
washudaq-1.1/: Makefile  Makefile.am  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  libtool
washudaq-1.1/digittes/: CAENServiceControl.cpp  Configure.cpp  Functions.cpp  ParamParser.cpp  PreProcess.cpp  Readout.cpp  digiTES.cpp  evb.cpp  pipefunctions.cpp
washudaq-1.1/readout/: CDPPReader.cpp  CReader.cpp  CWfReader.cpp  DPPConfig.cpp  config.cpp  main.cpp
(+435 files in other folders)
